syntax = "proto3";


package reservation;

// The greeting service definition.
service Reservation {
  // Sends a greeting
  rpc SayHello (ReservationRequest) returns (ReservationReply) {}
}

// The request message containing the user's name.
message ReservationRequest {
  string reservationId = 1;
}

// The response message containing the greetings
message ReservationReply {
  string reservationResponse = 1;
}
